# image-segmentation-overview

./: .gitignore  CMakeLists.txt  README.md
data/: gran01_64.txt  immed_gray_inv_20051218_frgr4.txt  immed_gray_inv_20051218_frgr4_max_01.txt  immed_gray_inv_20051218_frgr4_max_02.txt  immed_gray_inv_20051218_frgr4_min_01.txt  immed_gray_inv_20051218_frgr4_min_02.txt
programs/: exercises_011_a  exercises_013_a  exercises_013_b  exercises_01_a_contour_extraction  exercises_01_b_grassfire  exercises_02_a_wheel_teeth_count  exercises_02_b_watershed  exercises_11_a_flatzone  exercises_13_a_minimum  exercises_13_b_maximum
src/: exercises_011_a_flatzone.cpp  exercises_013_a_minimum.cpp  exercises_013_b_maximum.cpp  exercises_01_a.cpp  exercises_01_a_contour_extraction.cpp  exercises_01_b.cpp  exercises_01_b_grassfire.cpp  exercises_02_a.cpp  exercises_02_a_wheel_teeth_count.cpp  exercises_02_b.cpp  exercises_11_a_flatzone.cpp  exercises_13_a_minimum.cpp  exercises_13_b_maximum.cpp
src/utils/: utils.hpp
